# barcode-extraction-automation

./: pyproject.toml
extracao_codigo_boleto/: main.py
extracao_codigo_boleto/scripts/subtasks/: extrair_boleto.py  login.py
